--- a/link-up/package.json
+++ b/link-up/package.json
@@ -5,21 +5,23 @@
   "dependencies": {
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.48.1",
-   
-    "react": "^19.0.0",
-    "react-date-picker": "^11.0.0",
-    "react-datetime-picker": "^6.0.1",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0", 
+    "react-dom": "^18.2.0", 
     "react-scripts": "^5.0.1",
-    "web-vitals": "^4.2.4"
+    "react-datetime-picker": "^6.0.1",
+    "react-calendar": "^4.8.0",
+    "react-clock": "^5.1.0",
+    "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "svgo": "^2.0.0",
+    "resolve-url-loader": "5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-     
-     
   },
   "eslintConfig": {
     "extends": [
