--- a/link-up/package.json
+++ b/link-up/package.json
@@ -18,7 +18,6 @@
     "@svgr/webpack": "^8.1.0",
     "braces": "^3.0.3",
     "cra-template": "1.2.0",
-    "eslint": "^9.26.0",
     "loader-utils": "^3.3.1",
     "postcss": "^8.4.31",
     "react": "^19.0.0",
@@ -57,7 +56,11 @@
     ]
   },
   "overrides": {
-  "nth-check": "^2.1.1",
-  "postcss": "^8.4.31"
-}
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.31"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.1",
+    "eslint-config-react-app": "^7.0.1"
+  }
 }
